--- a/public/front-end/styles/style.css
+++ b/public/front-end/styles/style.css
@@ -76,7 +76,7 @@
       gap: 10px;
       align-items: center;
   }
-  .button {
+  .button{
     padding: 10px 20px;
     background-color: #59729a;
     border: 1px solid #91a4c3;
@@ -91,6 +91,21 @@
     margin: 10px;
 
   }
+  .close-button{
+    padding: 10px 20px;
+    background-color: #9a5151;
+    border: 1px solid #91a4c3;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    color: #fff;
+    transition: all 0.2s ease;
+    left: 90%;
+  }
+
   .button:disabled {
       opacity: 0.5;
       background-color: #ccc;
