--- a/public/front-end/styles/style.css
+++ b/public/front-end/styles/style.css
@@ -12,7 +12,7 @@
       padding: 0;
       background-color: #f0f0f0;
   }
-   
+
   .title {
     text-align: center;
     color: #f0f0f0;
@@ -224,3 +224,46 @@
     max-height: 550px; /* Adjust this value based on your content */
     padding: 10px;
 }  
+
+.task-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  width: 100%;
+  justify-content: center;
+}
+
+.task-card {
+  background-color: white;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s;
+  cursor: pointer;
+}
+
+.task-card h3 {
+  font-size: 0.6em; /* Reduce the size of the heading */
+  text-align: center;
+}
+
+.task-card p {
+  font-size: 0.4em; /* Reduce the size of paragraph text */
+}
+
+.task-card.pending {
+  box-shadow: 0 4px 8px rgba(255, 215, 0, 0.5); /* Yellow shadow for pending */
+}
+
+.task-card.ready {
+  box-shadow: 0 4px 8px rgba(5, 176, 5, 0.5); /* Green shadow for ready */
+}
+
+.task-card.error {
+  box-shadow: 0 4px 8px rgba(255, 0, 0, 0.5); /* Red shadow for error */
+}
+
+.task-card.completed {
+  box-shadow: 0 4px 8px rgba(6, 2, 241, 0.5); /* Green shadow for ready */
+}
+
