FIX: Hotmail isssue still pending

--- a/docs/templates/balance_ahorro_template.html
+++ b/docs/templates/balance_ahorro_template.html
@@ -35,6 +35,6 @@
 </tbody>
 </table>
 <hr />
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="{{iconUrl}}" alt="" width="30" height="30" /></p>
 <p style="text-align: center;"><span style="color: #999999;"><em>{{porcPart}}</em></span></p>
+<p style="text-align: center;"><span style="color: #999999;"><em>v{{appVersion}}</em></span></p>
 {{coupon}}
