--- a/public/front-end/styles/style.css
+++ b/public/front-end/styles/style.css
@@ -69,6 +69,7 @@
     align-items: center;
     margin-bottom: 20px;
     padding: 20px;
+    scrollbar-width: 2px;
   }
   .button-group {
       display: grid;
