--- a/public/front-end/styles/style.css
+++ b/public/front-end/styles/style.css
@@ -100,7 +100,7 @@
     color: #fff;
     transition: all 0.2s ease;
     margin: 10px;
-
+    box-shadow: 10px 10px 14px -8px #91a4c3;
   }
   .close-button{
     padding: 10px 20px;
@@ -154,7 +154,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     width: 100%;
-    box-shadow: 5px 10px 20px rgba(80, 118, 234, 0.15);
+    box-shadow: 10px 10px 14px -8px #91a4c3;
   }
   /* Change the style when dragging files over */
   .drag-drop-area.drag-over {
@@ -168,6 +168,7 @@
       margin-top: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      box-shadow: 10px 10px 14px -8px #91a4c3;
   }
   .footer {
       background-color: white;
